--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
     "build": "cross-env-shell NODE_ENV=production APP_TYPE=electron CI=false craco build",
     "test": "craco test",
     "eject": "craco eject",
-    "build-electron:portable": "cross-env-shell NODE_ENV=production REACT_APP_RELEASE_TYPE=portable webpack --config ./scripts/electronWebpackConfig.js --color",
-    "build-electron:setup": "cross-env-shell NODE_ENV=production REACT_APP_RELEASE_TYPE=setup webpack --config ./scripts/electronWebpackConfig.js --color",
-    "build-electron:dev": "cross-env-shell NODE_ENV=development REACT_APP_RELEASE_TYPE=setup webpack --config ./scripts/electronWebpackConfig.js --color",
+    "build-electron": "./node_modules/.bin/esbuild ./public/electron.js --bundle --target=node14 --external:electron --loader:.node=file --platform=node --outfile=./build/electron.js",
+    "build-electron:portable": "cross-env-shell NODE_ENV=production REACT_APP_RELEASE_TYPE=portable && npm run build-electron",
+    "build-electron:setup": "cross-env-shell NODE_ENV=production REACT_APP_RELEASE_TYPE=setup && npm run build-electron",
+    "build-electron:dev": "npm run build-electron -- --define:process.env.NODE_ENV=\\\"development\\\" --define:process.env.REACT_APP_RELEASE_TYPE=\\\"setup\\\"",
     "lint": "eslint .",
     "dev": "npm run build-electron:dev && cross-env-shell NODE_ENV=development APP_TYPE=electron BROWSER=none \"npm run start-electron\"",
     "dev-web": "cross-env-shell NODE_ENV=development APP_TYPE=web npm run start",
@@ -121,6 +122,7 @@
     "dotenv": "^10.0.0",
     "electron": "^13.1.9",
     "electron-builder": "^22.11.7",
+    "esbuild": "^0.12.24",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
